Blog post sharing buttons spacing fix

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -1105,6 +1105,9 @@ button.btn:hover {
             }
         }
     }
+    .blog-post-sharing {
+        margin-top: 1em;
+    }
 }
 
 .blog-post-metadata {
